Fix scrollbar in chrome

--- a/primefaces-themes/theme-base/components/menu/_tabmenu.scss
+++ b/primefaces-themes/theme-base/components/menu/_tabmenu.scss
@@ -10,7 +10,6 @@ body {
       @include flex();
       @include flex-wrap(nowrap);
       position: relative;
-      overflow-x: scroll;
 
       &:before {
         position: absolute;
